Still figuring out the best way to get bounding models/objects to pass to collision detector.

--- a/rewrite/modules/_tests/weapons.html
+++ b/rewrite/modules/_tests/weapons.html
@@ -9,6 +9,8 @@
 	<script type="text/javascript" src="../external/THREE-r58.min.js"></script>
 	<script type="text/javascript" src="../external/THREE.ColladaLoader.js"></script>
 
+	<script type="text/javascript" src="../collisions/Collisions.js"></script>
+
 	<script type="text/javascript" src="../utils/utils.js"></script>
 	<script type="text/javascript" src="../pool/Pool.js"></script>
 	<script type="text/javascript" src="../events/Events.js"></script>
