Updated to THREE.js r60

--- a/rewrite/modules/_tests/weapons.html
+++ b/rewrite/modules/_tests/weapons.html
@@ -6,8 +6,8 @@
 <body>
 	<script type="text/javascript" src="../external/Underscore.js"></script>
 	<script type="text/javascript" src="../external/Stats.min.js"></script>
-	<script type="text/javascript" src="../external/THREE-r58.min.js"></script>
-	<script type="text/javascript" src="../external/THREE.ColladaLoader.js"></script>
+	<script type="text/javascript" src="../external/THREE-r60.js"></script>
+	<script type="text/javascript" src="../external/THREE-r60.ColladaLoader.js"></script>
 
 	<script type="text/javascript" src="../collisions/Collisions.js"></script>
 
