Deprecated Rockets module in favour of weapons subclass

--- a/rewrite/modules/_tests/weapons.html
+++ b/rewrite/modules/_tests/weapons.html
@@ -36,12 +36,12 @@
 	<script type="text/javascript" src="../gameObjects/TargetBox.js"></script>
 
 	<script type="text/javascript" src="../particles/ShaderParticles.js"></script>
-	<script type="text/javascript" src="../rockets/Rockets.js"></script>
 
 	<script type="text/javascript" src="../weapon/PlasmaObject.js"></script>
 
 	<script type="text/javascript" src="../weapon/Weapon.js"></script>
 	<script type="text/javascript" src="../weapon/PlasmaCannon.js"></script>
+	<script type="text/javascript" src="../weapon/Rocket.js"></script>
 
 	
 	<script type="text/javascript" src="../hud/HUD.js"></script>
