--- a/rewrite/modules/_tests/weapons.html
+++ b/rewrite/modules/_tests/weapons.html
@@ -24,6 +24,7 @@
 	<script type="text/javascript" src="../io/KeyboardHandler.js"></script>
 	<script type="text/javascript" src="../assetLoader/AssetLoader.js"></script>
 	<script type="text/javascript" src="../targeting/TargetingSystem.js"></script>
+	<script type="text/javascript" src="../targeting/TargetBox.js"></script>
 
 	<script type="text/javascript" src="../planet/Planet.js"></script>
 	<script type="text/javascript" src="../starfield/Starfield.js"></script>
@@ -33,7 +34,6 @@
 	<script type="text/javascript" src="../gameObject/GameObject.js"></script>
 	<script type="text/javascript" src="../ship/Ship.js"></script>
 	<script type="text/javascript" src="../ship/Mothership.js"></script>
-	<script type="text/javascript" src="../gameObjects/TargetBox.js"></script>
 
 	<script type="text/javascript" src="../particles/ShaderParticles.js"></script>
 
