--- a/rewrite/sandbox/ai/waypoints.html
+++ b/rewrite/sandbox/ai/waypoints.html
@@ -9,111 +9,193 @@
 		<script type="text/javascript" src="../../modules/external/THREE-r60.js"></script>
 		<script type="text/javascript" src="../../modules/external/Stats.min.js"></script>
 		<script type="text/javascript" src="js/Waypoints.js"></script>
+        <script type="text/javascript" src="js/Flags.js"></script>
+        <script type="text/javascript" src="js/AI.js"></script>
 	</head>
 	<body>
 		<script type="text/javascript">
 			var scene = new THREE.Scene(),
-				camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 1, 10000 ),
+				camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 1, 20000 ),
                 renderer = new THREE.WebGLRenderer(),
                 stats = new Stats(),
-                clock = new THREE.Clock();
-
-            camera.position.set( 0, 0, 1200 );
-
-            renderer.setSize( window.innerWidth, window.innerHeight );
-            document.body.appendChild( renderer.domElement );
-
-            var waypoints = new Waypoints(),
-            	ship = new THREE.Mesh( new THREE.CubeGeometry(10, 10, 50), new THREE.MeshBasicMaterial({
-            		color: 0x867589
-            	}));
-
-            var nubbin = new THREE.Mesh( new THREE.SphereGeometry(1, 16, 16), new THREE.MeshBasicMaterial({
-            		color: new THREE.Color().setHSL( Math.random(), 0.5, 0.5 )
-            	}) );
-
-           	nubbin.position.z += 10;
-            ship.add( nubbin );
+                clock = new THREE.Clock(),
+                targets = [],
+                ship, ship2,
+                dt,
+                shipCollisionDebug,
+                collisionObject,
+                avoidWaypoint;
 
 
-            var targets = [];
 
-            function makeTarget( v ) {
-            	var target = new THREE.Mesh( new THREE.SphereGeometry(10, 10, 16, 16), new THREE.MeshBasicMaterial({
-            		color: new THREE.Color().setHSL( Math.random(), 0.5, 0.5 )
-            	}) );
+            function makeTarget( waypoints, v ) {
+                var target = new THREE.Mesh(
+                    new THREE.SphereGeometry(10, 10, 16, 16),
+                    new THREE.MeshBasicMaterial({
+                        color: new THREE.Color().setHSL( Math.random(), 0.5, 0.5 )
+                    })
+                );
 
-            	target.position.copy( v );
+                target.position.copy( v );
+                targets.push( target );
+                waypoints.addPoint( v );
+                scene.add( target );
+            };
 
-            	targets.push( target );
 
-            	waypoints.addPoint( v );
-            	scene.add( target );
+
+            function makeShip() {
+                ship = new THREE.Mesh(
+                    new THREE.CubeGeometry(10, 10, 50),
+                    new THREE.MeshPhongMaterial({
+                        color: 0x867589
+                    })
+                );
+
+                var wings = new THREE.Mesh(
+                    new THREE.CubeGeometry(50, 5, 10),
+                    new THREE.MeshPhongMaterial({
+                        color: 0x867589
+                    })
+                );
+
+                wings.position.set(0, 0, -10 );
+
+                ship.add( wings );
+
+                ship.ai = new AI( ship, {
+                    maxSteerVelocity: 0.02,
+                    maxVelocity: 5
+                });
+
+                ship.ai.flags.set( 'followWaypoints', true );
+
+                makeTarget( ship.ai.waypoints, new THREE.Vector3( 350, -100, 400 ));
+                makeTarget( ship.ai.waypoints, new THREE.Vector3( -350, -100, 400 ));
+                makeTarget( ship.ai.waypoints, new THREE.Vector3( -350, -100, -400 ));
+                makeTarget( ship.ai.waypoints, new THREE.Vector3( 350, -100, -400 ));
+
+
+                for( var i = 0; i < 1; ++i ) {
+                    makeTarget( ship.ai.waypoints, new THREE.Vector3(
+                        Math.random() * 500 - 250,
+                        Math.random() * 500 - 250,
+                        Math.random() * 500 - 250
+                    ));
+                }
+
+                scene.add( ship );
             }
 
-            ship.velocity = 5;
-            ship.steerAmount = 0.02;
-            ship.targetMatrix = new THREE.Matrix4();
-            ship.targetQuaternion = new THREE.Quaternion();
 
-            for( var i = 0; i < 20; ++i ) {
-            	var size = 1000;
+            function makeShip2() {
+                ship2 = new THREE.Mesh(
+                    new THREE.CubeGeometry(10, 10, 50),
+                    new THREE.MeshPhongMaterial({
+                        color: 0x867589
+                    })
+                );
 
-            	makeTarget( new THREE.Vector3(
-            		(size/2) - Math.random() * size,
-            		(size/2) - Math.random() * size,
-            		(size/2) - Math.random() * size
-            	));
+                ship2.position.set( 0, 0, -500 )
+
+                var wings = new THREE.Mesh(
+                    new THREE.CubeGeometry(50, 5, 10),
+                    new THREE.MeshPhongMaterial({
+                        color: 0x867589
+                    })
+                );
+
+                wings.position.set(0, 0, -10 );
+
+                ship2.add( wings );
+
+                ship2.ai = new AI( ship2, {
+                    maxSteerVelocity: 0.02,
+                    maxVelocity: 5
+                });
+
+                ship2.ai.flags.set( 'chase', true );
+                ship2.ai.steerVelocity = 0.04;
+
+                ship2.ai.waypoints.addPoint( ship.position );
+                ship2.ai.chaseObj = ship;
+
+                scene.add( ship2 );
             }
 
-            waypoints.registerObject( ship );
+
+            function makeSceneObjects() {
+                collisionObject = new THREE.Mesh(
+                    new THREE.SphereGeometry(50, 16, 16),
+                    new THREE.MeshPhongMaterial({
+                        color: new THREE.Color().setHSL( Math.random(), 0.5, 0.5 ),
+                        transparent: true,
+                        opacity: 0.2,
+                        side: THREE.DoubleSide,
+                        depthWrite: false
+                    })
+                );
+
+                collisionObject.position.set( 0, -50, 550 );
+
+
+                avoidWaypoint = new THREE.Mesh(
+                    new THREE.SphereGeometry(10, 16, 16),
+                    new THREE.MeshBasicMaterial({
+                        color: 0xffffff
+                    })
+                );
+
+
+                var light = new THREE.HemisphereLight( 0x867589, 0x402440, 1 );
+                scene.add( light );
+
+                scene.add( avoidWaypoint );
+                scene.add( collisionObject );
+            }
 
 
 
-            scene.add( ship );
-            // camera.position = ship.position;
+            function initTHREE() {
 
+                camera.position.set( 0, 1000, 0 );
+                scene.add( camera );
 
+                renderer.setClearColor( 0x00000 );
+                renderer.setSize( window.innerWidth, window.innerHeight );
 
-            function updateShip() {
-            	var currentWaypoint = waypoints.getPointAtIndex( ship.waypointsIndex );
+                stats.domElement.style.position = 'absolute';
+                stats.domElement.style.top = 0;
 
-            	targets[ ship.waypointsIndex ].material.color.setHSL( Math.random(), 0.5, Math.random() );
-
-            	// camera.lookAt( currentWaypoint );
-
-            	ship.targetMatrix.lookAt( currentWaypoint, ship.position, ship.up );
-            	ship.targetQuaternion.setFromRotationMatrix( ship.targetMatrix );
-
-            	ship.quaternion.slerp( ship.targetQuaternion, ship.steerAmount );
-
-            	ship.translateZ( ship.velocity );
-
-            	var dist = ship.position.distanceTo( currentWaypoint );
-
-            	if( dist < ship.velocity * ship.steerAmount * 1400 ) {
-            		ship.waypointsIndex += 1;
-
-            		if( ship.waypointsIndex === waypoints.getNumPoints() ) {
-            			ship.waypointsIndex = 0;
-            		}
-            	}
+                document.body.appendChild( renderer.domElement );
+                document.body.appendChild( stats.domElement );
             }
 
 
 
 			function animate() {
+                dt = clock.getDelta();
+
                 requestAnimationFrame( animate );
                 stats.update();
-                render();
-                updateShip();
-            }
 
+                ship.ai.tick( dt );
+                ship2.ai.tick( dt );
+                render();
+            }
 
             function render() {
                 renderer.render( scene, camera );
                 camera.lookAt( ship.position );
             }
+
+
+
+
+            initTHREE();
+            makeSceneObjects();
+            makeShip();
+            makeShip2();
 
             animate();
 		</script>
